# crgeo-learning

./: .gitattributes  .gitignore  LICENSE.TXT  README.md  setup.cfg
crgeo_learning/: base_project.py
crgeo_learning/geometric/: __init__.py  base_geometric.py  types.py
crgeo_learning/geometric/components/: cvae.py
crgeo_learning/geometric/project/: base_geometric_project.py  hydra_geometric_config.py
crgeo_learning/geometric/training/: experiment.py  geometric_trainer.py  render_model.py  training_utils.py  types.py
crgeo_learning/reinforcement/: __init__.py  _episode_resetter.py  base_geometric_feature_extractor.py  commonroad_gym_env.py  constants.py  experiment.py
crgeo_learning/reinforcement/observer/: base_observer.py  flattened_graph_observer.py
crgeo_learning/reinforcement/project/: base_rl_project.py  hydra_rl_config.py
crgeo_learning/reinforcement/rewarder/: __init__.py
crgeo_learning/reinforcement/termination_criteria/: __init__.py  base_termination_criterion.py
crgeo_learning/reinforcement/training/: rl_trainer.py  types.py
crgeo_learning/training/git_features/: defaults.py  git_feature_collector.py
crgeo_learning/training/optimizer/: __init__.py  hyperparameter_optimizer_service.py  weights_and_biases_callback.py
crgeo_learning/training/wandb_service/: __init__.py  wandb_service.py
projects/geometric_models/dummy/: config.yaml  model.py  project.py  run.py
projects/geometric_models/lane_occupancy/: config.yaml  project.py  run.py
projects/geometric_models/trajectory_prediction/: config.yaml  project.py  run.py
(+107 files in other folders)
