[metadata]
name = commonroad-geometric-learning
version = 2023.0
description = Learning utils for training graph neural networks with CommonRoad-Geometric
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CommonRoad/crgeo-learning

[options]
packages = find:
setup_requires =
    setuptools
install_requires =
    crgeo
    gym==0.21
    optuna==2.10.0
    hydra-core==1.2.0
    stable-baselines3==1.5.0
    tensorboard>=2.8.0
    tqdm>=4.62.3
    wandb>=0.12.9
    optuna==2.10.0
python_requires = >=3.8

[options.extras_require]
tests =
    mypy
    pytest

[options.packages.find]
include = crgeo_learning

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
# https://justincaustin.com/blog/mypy-tips-and-tricks
files = crgeo_learning
exclude = ^crgeo_learning/external
python_version = 3.7
warn_unreachable = True
ignore_missing_imports = True
show_error_codes = True
# strict = True
strict = False
disallow_subclassing_any = False
disallow_untyped_calls = False
no_implicit_reexport = False
explicit_package_bases = True
namespace_packages = True


[tool:pytest]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
testpaths = crgeo_learning/tests
